--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 /* imagem de fundo */
 .imagem-fundo{
     background-image: url(./images/bg-header-desktop.png);
-    width: 100%;
+    max-width: 100%;
     height: 290px;
 }
 
@@ -32,7 +32,7 @@
 /* estilização dos textos */
 .text-inicio{
     text-align: center;
-    margin-top: -50px;
+    margin-top: 70px;
     font-family: 'Bai Jamjuree', sans-serif;
 }
 
@@ -53,7 +53,11 @@
 
 /* INICIO SEGUNDA PARTE */
 
-.container, h1{
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     margin-top: 120px;
     font-family: 'Bai Jamjuree', sans-serif;
@@ -64,19 +68,23 @@
     text-align: center;
     width: 620px;
     margin-top: 20px;
-    margin-left: 340px;
     font-family: 'Bai Jamjuree', sans-serif;
     color: hsl(201, 11%, 66%);
 }
 
+.box-access{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #image-computer img{
-    margin-top: 75px;
-    margin-left: -760px;
+    position: relative;
+    right: 100px;
+    margin-top: 150px;
 }
 
 #text-quick{
-    margin-left: 700px;
-    margin-top: -550px;
     width: 380px;
     font-size: 18px;
     font-family: 'Bai Jamjuree', sans-serif;
@@ -101,16 +109,24 @@
 }
 
 #box-text-two{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 260px;
+}
+
+.box-supercharge{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #image-device img{
     margin-top: 100px;
-    margin-left: 150px;
 }
 
 #box-text-three{
-    margin-top: -80px;
+    margin-top: -50px;
 }
 
 #box-text-three p{
