--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ li a {
         justify-content: center;
     }
 
-    .btn{
+    .btns{
         display: flex;
         flex-direction: column;
         justify-content: center;
