--- a/style.css
+++ b/style.css
@@ -52,8 +52,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    text-align: center;
     margin-top: 120px;
     font-family: 'Bai Jamjuree', sans-serif;
     color: hsl(210, 10%, 33%);
@@ -311,6 +309,12 @@ li a {
         margin: 15px 0px 0px 0px;
     }
 
+    .container{
+        display: flex;
+        align-items: center;
+        font-size: 1em;
+    }
+
     .box-access {
         display: flex;
         align-items: center;
@@ -323,32 +327,86 @@ li a {
         position: relative;
         right: 0;
         left: 0;
-        max-width: 50%;
+        max-width: 90%;
     }
 
     .box-access h3{
         margin-top: 30px;
     }
 
-    .box-supercharge {
+    #box-text-two{
+        margin-top: 150px;
+    }
+
+    .box-supercharge #box-text-three{
+        margin-top: 20px;
+        
+    }
+
+    #image-device{
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
     }
 
     .box-supercharge img {
-        max-width: 50%;
+        max-width: 100%;
+    }
+
+    #box-propaganda .explicacoes{
+        flex-direction: column;
+    }
+
+    .plain-text{
+        margin: 50px 0px 50px ;
     }
 
     .marcas{
         display: flex;
         justify-content: center;
         flex-direction: column;
+        margin-top: 70px;
     }    
 
     footer{
         width: 100%;
+        height: 100%;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo-footer{
+        margin: 20px 0px 0px 0px;
+    }
+
+    .column{
+        margin: 0;
+        padding: 0;
+    }
+
+    .column ul li{
+        margin-top: 20px;
+    }
+
+    .icons-footer{
+        margin: 0;
+        padding: 0;
+    }
+
+    .icons-footer img{
+        margin-top: 30px;
+        padding: 0;
+    }
+
+    .icons-app .img-twitter{
+        margin: 0px 20px 0px 20px;
+    }
+
+    .links-footer{
+        flex-direction: column;
+        text-align: center;
+        margin-top: 10px;
     }
     
 }
